--- a/MediHubs/templates/auth_application/login.html
+++ b/MediHubs/templates/auth_application/login.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html>
+{% extends 'auth.html' %}
+{% comment %} This template extends the base auth.html template!!! {% endcomment %}
+
+{% block title %}Login - MediHub{% endblock %}
+{% block content %}
+    <h2>Login</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+    </form>
+    <p>Already have an account? <a href="{% url 'auth_application:register' %}">Login</a></p>
+{% endblock %}
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Patient Dashboard - MediHub</title>
@@ -133,4 +146,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
